--- a/css/menu.css
+++ b/css/menu.css
@@ -3,6 +3,7 @@
 /*Aside*/
 .premiere-section {
   display: flex;
+
 }
 .premiere-section aside {
   width: 30%;
@@ -52,16 +53,25 @@ aside .aside-nav ul a:hover {
 }
 
 .description-menu h1 {
+    padding: 10px;
   font-family: "Montserrat", sans-serif;
   font-size: 3rem;
   letter-spacing: 1rem;
+
 }
 .corps-menu {
-  margin-left: 10%;
+
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+   
+
 }
 .img-menu {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
 }
 .img-menu figure {
   width: 200px;
@@ -258,13 +268,10 @@ form .btn button:hover {
   .premiere-section aside {
     display: none;
   }
-  .corps-menu {
-    margin-top: 5%;
-    width: 100%;
-    margin: 0 auto;
+
   }
   .img-menu {
-    grid-template-columns: repeat(2, 1fr);
+   /*  grid-template-columns: repeat(2, 1fr); */
   }
   .img-menu figure {
     width: 125px;
@@ -288,10 +295,7 @@ form .btn button:hover {
     width: 100%;
   }
   /*section Avis*/
-  .container {
-    width: 300px;
-    margin-left: 0;
-  }
+
   .star-widget label {
     width: 30px;
   }
@@ -300,7 +304,7 @@ form .btn button:hover {
   .nav-aside-mobile {
     width: 80%;
     padding: 10%;
-    display: block;
+    display: none;
     background-color: #dcdcdc;
   }
   .nav-aside-mobile .aside-mobile h3 {
@@ -327,7 +331,7 @@ form .btn button:hover {
     height: 1px;
     background-color: var(--orange-color);
   }
-}
+
 
 @media screen and (max-width: 400px) {
   /*section Avis*/
@@ -347,7 +351,7 @@ form .btn button:hover {
 
 @media screen and (max-width: 360px) {
     body{
-        margin: 1%;
+  /*       margin: 1%; */
     }
    .section-plat figure{
     display: block;
@@ -356,10 +360,18 @@ form .btn button:hover {
     
   }
     .section-plat figure img {
+    display: block;
     width: 100%;
     height: 100%;
     border-radius: 8px;
     border: 0;
     box-shadow: none;
     }
+}
+@media screen and (max-width: 360px) {
+  /*section Avis*/
+  .img-menu {
+    grid-template-columns: repeat(2, 1fr);
+  }
+ 
 }
