--- a/css/style.css
+++ b/css/style.css
@@ -390,10 +390,6 @@ footer figure img{
     width: 30px;
 }
 
-/*les mdeias querrys*/
-@media (max-width: 1192px){
-
-}
 
 /*Ecran de moins de 768px*/
 @media screen and (max-width: 768px){
@@ -529,7 +525,11 @@ footer figure img{
     footer p{
         font-size: 1.2rem;
     }
-    
+    .second-section .description h3{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 300px;
+    white-space: nowrap;
 }
 /*plus petits ecrans*/
 @media screen and (max-width: 400px){
